--- a/test.html
+++ b/test.html
@@ -16,22 +16,56 @@
     <div id="map"></div>
 
     <script>
-        // 在這裡替換為你的 API 金鑰
-        const apiKey = 'AIzaSyDPeh6HKg5TrW1qZeOrc89dJHdESv67EeQ';
 
         function initMap() {
-            // 初始化地圖
-            const map = new google.maps.Map(document.getElementById('map'), {
-                center: { lat: 37.7749, lng: -122.4194 }, // 初始中心位置（舊金山）
-                zoom: 12 // 初始縮放級別
-            });
+            if ("geolocation" in navigator) {
+            // 當前位置
+                navigator.geolocation.getCurrentPosition(function(position) {
+                    var currentLocation = {
+                        lat: position.coords.latitude,
+                        lng: position.coords.longitude
+                    };
+                    // 創建地圖
+                    map = new google.maps.Map(document.getElementById('map'), {
+                        center: currentLocation,
+                        zoom: 15,
+                        mapTypeControl: false,
+                        zoomControl: false,
+                        scaleControl: false,
+                        streetViewControl: false,
+                        rotateControl: false,
+                        fullscreenControl: false,
+                        styles: [
+                            {
+                                featureType: 'poi',
+                                elementType: 'labels',
+                                stylers: [
+                                    { visibility: 'off' }
+                                ]
+                            }
+                        ]
+                    });
 
-            // 在地圖上添加標記
-            const marker = new google.maps.Marker({
-                position: { lat: 37.7749, lng: -122.4194 },
-                map: map,
-                title: 'Hello World!'
-            });
+                    infoWindow = new google.maps.InfoWindow();
+                    // 當前位置標記
+                    var circle = new google.maps.Marker({
+                            position: currentLocation,
+                            icon: {
+                                path: google.maps.SymbolPath.CIRCLE,
+                                scale: 5
+                            },
+                            map: map
+                        });
+                        console.log("map finish");
+
+                });
+               
+            }
+            else {
+                    console.log("定位問題");
+                    alert("不支援定位");
+            }
+            // 初始化地圖
         }
     </script>
 
