--- a/test.html
+++ b/test.html
@@ -17,56 +17,47 @@
 
     <script>
 
-        function initMap() {
-            if ("geolocation" in navigator) {
-            // 當前位置
-                navigator.geolocation.getCurrentPosition(function(position) {
-                    var currentLocation = {
-                        lat: position.coords.latitude,
-                        lng: position.coords.longitude
-                    };
-                    // 創建地圖
-                    map = new google.maps.Map(document.getElementById('map'), {
-                        center: currentLocation,
-                        zoom: 15,
-                        mapTypeControl: false,
-                        zoomControl: false,
-                        scaleControl: false,
-                        streetViewControl: false,
-                        rotateControl: false,
-                        fullscreenControl: false,
-                        styles: [
-                            {
-                                featureType: 'poi',
-                                elementType: 'labels',
-                                stylers: [
-                                    { visibility: 'off' }
-                                ]
-                            }
-                        ]
-                    });
-
-                    infoWindow = new google.maps.InfoWindow();
-                    // 當前位置標記
-                    var circle = new google.maps.Marker({
-                            position: currentLocation,
-                            icon: {
-                                path: google.maps.SymbolPath.CIRCLE,
-                                scale: 5
-                            },
-                            map: map
-                        });
-                        console.log("map finish");
-
-                });
-               
-            }
-            else {
-                    console.log("定位問題");
-                    alert("不支援定位");
-            }
-            // 初始化地圖
-        }
+function initMap() {
+    console.log("1");
+    navigator.geolocation.getCurrentPosition(function(position) {
+        var currentLocation = {
+            lat: position.coords.latitude,
+            lng: position.coords.longitude
+        };
+        // 創建地圖
+        map = new google.maps.Map(document.getElementById('map'), {
+            center: currentLocation,
+            zoom: 15,
+            mapTypeControl: false,
+            zoomControl: false,
+            scaleControl: false,
+            streetViewControl: false,
+            rotateControl: false,
+            fullscreenControl: false,
+            styles: [
+                {
+                    featureType: 'poi',
+                    elementType: 'labels',
+                    stylers: [
+                        { visibility: 'off' }
+                    ]
+                }
+            ]
+        });
+        infoWindow = new google.maps.InfoWindow();
+        // 當前位置標記
+        var circle = new google.maps.Marker({
+            position: currentLocation,
+            icon: {
+                path: google.maps.SymbolPath.CIRCLE,
+                scale: 5
+            },
+            map: map
+        });
+        console.log("map finish");
+    });
+    console.log("2");
+}
     </script>
 
     <!-- 引入 Google Maps JavaScript API -->
